[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/ui/battle_ui.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/crown_icon.png" id="2"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/elixir_icon.png" id="3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.2, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_left = 5
corner_radius_bottom_right = 5

[node name="BattleUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource("1")

[node name="TopBar" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.05
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="PlayerInfo" type="HBoxContainer" parent="TopBar"]
anchor_bottom = 1.0
anchor_right = 0.3
offset_left = 10.0
offset_top = 3.0
offset_bottom = -3.0

[node name="Avatar" type="TextureRect" parent="TopBar/PlayerInfo"]
layout_mode = 2
custom_minimum_size = Vector2(30, 30)
expand_mode = 1
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="TopBar/PlayerInfo/Avatar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.5, 1.0)

[node name="PlayerName" type="Label" parent="TopBar/PlayerInfo"]
layout_mode = 2
text = "Player"
theme_override_font_sizes/font_size = 14

[node name="CrownIcon" type="TextureRect" parent="TopBar/PlayerInfo"]
layout_mode = 2
custom_minimum_size = Vector2(20, 20)
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="CrownCount" type="Label" parent="TopBar/PlayerInfo"]
layout_mode = 2
text = "0"
theme_override_font_sizes/font_size = 14

[node name="TimerContainer" type="CenterContainer" parent="TopBar"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_right = 50.0

[node name="TimerLabel" type="Label" parent="TopBar/TimerContainer"]
layout_mode = 2
text = "3:00"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="EnemyInfo" type="HBoxContainer" parent="TopBar"]
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -10.0
offset_top = 3.0
offset_bottom = -3.0
alignment = 2

[node name="CrownCount" type="Label" parent="TopBar/EnemyInfo"]
layout_mode = 2
text = "0"
theme_override_font_sizes/font_size = 14

[node name="CrownIcon" type="TextureRect" parent="TopBar/EnemyInfo"]
layout_mode = 2
custom_minimum_size = Vector2(20, 20)
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="EnemyName" type="Label" parent="TopBar/EnemyInfo"]
layout_mode = 2
text = "Enemy"
theme_override_font_sizes/font_size = 14

[node name="Avatar" type="TextureRect" parent="TopBar/EnemyInfo"]
layout_mode = 2
custom_minimum_size = Vector2(30, 30)
expand_mode = 1
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="TopBar/EnemyInfo/Avatar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.5, 0.2, 0.2, 1.0)

[node name="ElixirContainer" type="Panel" parent="."]
anchor_top = 0.875
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = 20.0
offset_right = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ElixirBar" type="ProgressBar" parent="ElixirContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -80.0
offset_bottom = -5.0
max_value = 10.0
value = 5.0
show_percentage = false

[node name="ElixirIcon" type="TextureRect" parent="ElixirContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_right = -45.0
offset_top = 3.0
offset_bottom = -3.0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5

[node name="ElixirLabel" type="Label" parent="ElixirContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
text = "5/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomPanel" type="Panel" parent="."]
anchor_top = 0.92
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="CardHandContainer" type="HBoxContainer" parent="BottomPanel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_right = 150.0
offset_top = 5.0
offset_bottom = -5.0
theme_override_constants/separation = 10
alignment = 1

[node name="NextCardPreview" type="TextureRect" parent="BottomPanel"]
anchor_left = 0.85
anchor_right = 0.95
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = -5.0
expand_mode = 1
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="BottomPanel/NextCardPreview"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="NextLabel" type="Label" parent="BottomPanel/NextCardPreview"]
anchor_right = 1.0
text = "NEXT"
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1